Prevent scrollbars on mobile

--- a/app/stylus/index.styl
+++ b/app/stylus/index.styl
@@ -11,6 +11,8 @@ html {
 	height: 100%;
 	font-family: 'Roboto';
 	font-weight: 300;
+	overflow-x: hidden;
+	overflow-y: hidden;
 
 	+mobile() {
 		font-size: 12px;
@@ -20,6 +22,7 @@ html {
 body {
 	height: 100%;
 	overflow-x: hidden;
+	overflow-y: hidden;
 	background-color: #333;
 
 	+desktop() {
